# O-Roliste_rust

./: .gitignore  Cargo.toml
migrations/2022-03-26-235730_user/: mod.rs
migrations/2022-03-26-235730_users/: mod.rs
migrations/2022-03-28-205827_tagperso/: mod.rs
migrations/2022-03-28-221735_user_tagperso/: mod.rs
src/: main.rs  router.rs  schema.rs
src/controllers/: base.rs
src/database/: models.rs  schema.rs
src/utils/: error_handling.rs
templates/: base.html
templates/pages/: error.html  error.jinja  index.html  index.jinja  user.html  user.jinja
