[package]
name = "o_roliste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
tera = "1.15.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
chrono = { version = "0.4.19", features = ["serde"]}
dotenv = "0.15.0"
log = "0.4.16"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"